Creation and modification on most resources, update api docs