@@ -1,19 +1,22 @@
 package org.iaeste.szakal2;
 
 import io.restassured.http.ContentType;
+import org.checkerframework.checker.guieffect.qual.UI;
 import org.iaeste.szakal2.models.AccessRight;
 import org.iaeste.szakal2.models.entities.Role;
 import org.iaeste.szakal2.repositories.AccessRightRepository;
 import org.iaeste.szakal2.repositories.RolesRepository;
+import org.iaeste.szakal2.util.IntegrationTestWithTools;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
-public class RoleIntegrationTest extends IntegrationTestBase {
+public class RoleIntegrationTest extends IntegrationTestWithTools {
 
     @Autowired
     private RolesRepository rolesRepository;
@@ -23,11 +26,9 @@ public class RoleIntegrationTest extends IntegrationTestBase {
 
     @Test
     public void testAddRole() {
-        AccessRight accessRight = accessRightRepository.save(AccessRight.builder()
-                .description("Access to everything")
-                .build());
+        AccessRight accessRight = createAccessRight("access_to_everything");
 
-        UUID roleId = UUID.fromString(withAdminAuth()
+        UUID roleId = UUID.fromString(withAccessRights("role_modification")
                 .contentType(ContentType.JSON)
                 .body(StringTemplate.STR. """
                         {
@@ -47,33 +48,72 @@ public class RoleIntegrationTest extends IntegrationTestBase {
         assertThat(rolesRepository.findRoleById(roleId).get().getName()).isEqualTo("USER");
         assertThat(rolesRepository.findRoleById(roleId).get().getDescription()).isEqualTo("Role for a user");
         assertThat(rolesRepository.findRoleById(roleId).get().getAccessRights().size()).isEqualTo(1);
+        assertEquals(accessRight.getId(), rolesRepository.findRoleById(roleId).get().getAccessRights().get(0).getId());
 
     }
 
     @Test
-    public void testModifyRole() {
-        AccessRight accessRight = accessRightRepository.save(
-                AccessRight.builder()
-                        .code("nothing")
-                        .description("Access to nothing")
-                        .build());
+    public void testAddRoleWithTheSameNameShouldAddJustOne() {
+        AccessRight accessRight = createAccessRight("access_to_everything");
 
-        AccessRight adminAccessRight = accessRightRepository.findAccessRightByCode("role_modification").get();
-
-        UUID adminUserRoleId = rolesRepository.findRoleByName("ADMIN").get().getId();
-
-        UUID roleId = UUID.fromString(withAdminAuth()
+        withAccessRights("role_modification")
                 .contentType(ContentType.JSON)
                 .body(StringTemplate.STR. """
                         {
-                            "id" : "\{adminUserRoleId}",
-                            "name" : "ADMIN-2",
-                            "description" : "Role for a better admin",
-                            "accessRights" : ["\{ accessRight.getId() }", "\{adminAccessRight.getId()}"]
+                            "name" : "USER",
+                            "description" : "Role for a user",
+                            "accessRights" : ["\{ accessRight.getId() }"]
                         }
                         """ )
                 .when()
-                .put("/api/roles")
+                .post("/api/roles")
+                .then()
+                .statusCode(200);
+
+        withAccessRights("role_modification")
+                .contentType(ContentType.JSON)
+                .body(StringTemplate.STR. """
+                        {
+                            "name" : "USER",
+                            "description" : "Role for a user",
+                            "accessRights" : ["\{ accessRight.getId() }"]
+                        }
+                        """ )
+                .when()
+                .post("/api/roles")
+                .then()
+                .statusCode(409);
+
+        assertThat(rolesRepository.findAll().size()).isEqualTo(2);
+        assertThat(rolesRepository.findRoleByNameIgnoreCase("USER").get().getDescription())
+                .isEqualTo("Role for a user");
+    }
+
+    @Test
+    public void testModifyRole() {
+        AccessRight accessRight = createAccessRight("role_modification");
+
+        rolesRepository.save(Role.builder()
+                .name("ADMIN")
+                .accessRights(List.of(accessRight))
+                .build());
+
+
+        AccessRight adminAccessRight = accessRightRepository.findAccessRightByCode("role_modification").get();
+
+        UUID adminUserRoleId = rolesRepository.findRoleByNameIgnoreCase("ADMIN").get().getId();
+
+        UUID roleId = UUID.fromString(withAccessRights("role_modification")
+                .contentType(ContentType.JSON)
+                .body(StringTemplate.STR. """
+                        {
+                            "name" : "ADMIN-2",
+                            "description" : "Role for a better admin",
+                            "accessRights" : ["\{ accessRight.getId() }", "\{ adminAccessRight.getId() }"]
+                        }
+                        """ )
+                .when()
+                .put("/api/roles/" + adminUserRoleId)
                 .then()
                 .statusCode(200)
                 .extract()
@@ -83,26 +123,66 @@ public class RoleIntegrationTest extends IntegrationTestBase {
         assertThat(rolesRepository.findRoleById(roleId).get().getName()).isEqualTo("ADMIN-2");
         assertThat(rolesRepository.findRoleById(roleId).get().getDescription()).isEqualTo("Role for a better admin");
         assertThat(rolesRepository.findRoleById(roleId).get().getAccessRights().size()).isEqualTo(2);
-        assertThat(rolesRepository.findRoleByName("ADMIN")).isEmpty();
+        assertThat(rolesRepository.findRoleByNameIgnoreCase("ADMIN")).isEmpty();
+    }
+
+    @Test
+    public void testModifyRoleWithNonExistentAccessRight() {
+        AccessRight accessRight = createAccessRight("role_modifictaion");
+
+        rolesRepository.save(Role.builder()
+                .name("ADMIN")
+                .accessRights(List.of(accessRight))
+                .build());
+
+        UUID adminUserRoleId = rolesRepository.findRoleByNameIgnoreCase("ADMIN").get().getId();
+
+        withAccessRights("role_modification")
+                .contentType(ContentType.JSON)
+                .body(StringTemplate.STR. """
+                        {
+                            "name" : "ADMIN-2",
+                            "description" : "Role for a better admin",
+                            "accessRights" : ["\{ accessRight.getId() }", "\{UUID.randomUUID() }"]
+                        }
+                        """ )
+                .when()
+                .put("/api/roles/" + adminUserRoleId)
+                .then()
+                .statusCode(404);
+    }
+
+    @Test
+    public void testAddRoleWithNonExistenAccessRightThrows404() {
+
+       withAccessRights("role_modification")
+                .contentType(ContentType.JSON)
+                .body(StringTemplate.STR. """
+                        {
+                            "name" : "USER",
+                            "description" : "Role for a user",
+                            "accessRights" : ["\{ UUID.randomUUID() }"]
+                        }
+                        """ )
+                .when()
+                .post("/api/roles")
+                .then()
+                .statusCode(404);
     }
 
     @Test
     public void testDeleteRole() {
-        AccessRight accessRight = accessRightRepository.save(
-                AccessRight.builder()
-                        .code("should_not_delete")
-                        .description("Access to nothing")
-                        .build());
+        AccessRight accessRight = createAccessRight("should_not_delete");
 
         Role role = Role.builder()
                 .name("DELETED")
-                .accessRights(Arrays.asList(accessRight))
+                .accessRights(List.of(accessRight))
                 .description("Role to be deleted")
                 .build();
 
         UUID deletedRoleID = rolesRepository.save(role).getId();
 
-      withAdminAuth()
+        withAccessRights("role_modification")
                 .when()
                 .delete("/api/roles/" + deletedRoleID)
                 .then()
