@@ -12,7 +12,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
 @Service
 @Log4j2
@@ -23,33 +23,51 @@ public class InitService {
     private final UsersRepository usersRepository;
     private final AccessRightRepository accessRightRepository;
 
+    private static final List<AccessRight> viewingRights = List.of(
+            AccessRight.builder().code("user_viewing").description("View users").build(),
+            AccessRight.builder().code("role_viewing").description("View roles").build(),
+            AccessRight.builder().code("company_viewing").description("View companies").build(),
+            AccessRight.builder().code("category_viewing").description("View categories").build()
+    );
+
+    private static final List<AccessRight> modificationRights = List.of(
+            AccessRight.builder().code("campaign_modification").description("Modify campaigns").build(),
+            AccessRight.builder().code("role_modification").description("Modify roles").build(),
+            AccessRight.builder().code("company_modification").description("Modify companies").build(),
+            AccessRight.builder().code("category_modification").description("Modify categories").build(),
+            AccessRight.builder().code("user_acceptance").description("Accept users").build(),
+            AccessRight.builder().code("journey_modification").description("Modify journeys").build()
+    );
+
     public InitService(RolesRepository rolesRepository, UsersRepository usersRepository, AccessRightRepository accessRightRepository) {
         this.rolesRepository = rolesRepository;
         this.usersRepository = usersRepository;
         this.accessRightRepository = accessRightRepository;
-        this.passwordEncoder = new BCryptPasswordEncoder();;
+        this.passwordEncoder = new BCryptPasswordEncoder();
     }
 
     public void initializeDatabase() {
         if (usersRepository.findAll().isEmpty()) {
-            createDefaultAdminUser(createDefaultRole(createRolesModificationAccessRight()));
+            List<AccessRight> savedAccessRights = createDefaultAccessRights();
+            Role adminRole = createDefaultAdminRole(savedAccessRights);
+            createDefaultAdminUser(adminRole);
         }
     }
 
-    private AccessRight createRolesModificationAccessRight() {
+    private List<AccessRight> createDefaultAccessRights() {
         log.info("Creating default access rights");
-        return accessRightRepository.save(AccessRight.builder()
-                .description("Right to modify roles")
-                .code("role_modification")
-                .build());
+        List<AccessRight> saved = accessRightRepository.saveAll(modificationRights);
+        saved.addAll(accessRightRepository.saveAll(viewingRights));
+        return saved;
+
     }
 
-    private Role createDefaultRole(AccessRight accessRight) {
+    private Role createDefaultAdminRole(List<AccessRight> accessRights) {
         log.info("Creating default role");
         Role adminRole = Role.builder()
                 .name("ADMIN")
                 .description("System administrator")
-                .accessRights(Arrays.asList(accessRight))
+                .accessRights(accessRights)
                 .build();
         return rolesRepository.save(adminRole);
     }
@@ -60,10 +78,11 @@ public class InitService {
                 .username("administrator")
                 .email("administrator@szakal.org")
                 .password(passwordEncoder.encode("administrator"))
-                .roles(Arrays.asList(role))
+                .roles(List.of(role))
                 .name("Admin")
                 .surname("Admin")
                 .createdAt(LocalDateTime.now())
+                .accepted(true)
                 .build());
     }
 }
